# paddle-conditions

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: hassfest.yml  lint.yml  release.yml  test.yml  validate.yml
_done/: 2026-03-13-fix-tests-and-sync-repo.md  20260310-bundled-dashboard-cards.md  20260313-paddleconditions-website.md
_todo/: 20260310-chartjs-dashboard-cards.md  20260314-backend-api.md  20260317-web-app-next.md  20260406-cdec-integration.md
custom_components/paddle_conditions/: __init__.py  cloud_sync.py  config_flow.py  const.py  coordinator.py  dashboard_generator.py  diagnostics.py  icons.json  manifest.json  models.py  presets.py  profiles.py  quality_scale.yaml  scoring.py  sensor.py  services.yaml  strings.json
custom_components/paddle_conditions/api/: __init__.py  base.py  noaa.py  (+2 more)
frontend/: build.js  package-lock.json  package.json
frontend/src/: paddle-cards.js  utils.js
frontend/tests/: chart-utils.test.js  date-adapter.test.js  utils.test.js
ha-integration/: README.md
tests/: __init__.py  conftest.py  test_api_base.py  test_api_noaa.py  test_api_open_meteo.py  test_api_usgs.py  test_cloud_sync.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_frontend.py  test_init.py  test_profiles.py  test_scoring.py  test_sensor.py
tests/fixtures/: noaa_coops_tides.json  open_meteo_aqi.json  open_meteo_weather.json  usgs_water_temp.json
(+37 files in other folders)
